Upgrade Spring Boot 4/JDK 25 - build authentication-service, build person-service, build user-service